--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/PV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=../../librerias-jar/DateChooser.jar
 file.reference.jtds-1.2.5_FUNCIONAEN05Y08.jar=C:\\Users\\AGONZALEZ\\Desktop\\jtds-1.2.5 FUNCIONAEN05Y08.jar
 file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\AGONZALEZ\\Downloads\\librerias\\mysql-connector-java-5.1.6-bin.jar
 includes=**
@@ -36,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
-    ${file.reference.jtds-1.2.5_FUNCIONAEN05Y08.jar}
+    ${file.reference.jtds-1.2.5_FUNCIONAEN05Y08.jar}:\
+    ${file.reference.DateChooser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
