--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,16 @@ dist.jar=${dist.dir}/PV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections-3.2.1-1.0.0.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\commons-collections-3.2.1-1.0.0.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\commons-logging-1.1.jar
 file.reference.DateChooser.jar=../../librerias-jar/DateChooser.jar
+file.reference.groovy-all-2.1.3.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\groovy-all-2.1.3.jar
+file.reference.itext-pdfa-5.4.0.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\itext-pdfa-5.4.0.jar
+file.reference.itextpdf-5.1.0.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\itextpdf-5.1.0.jar
+file.reference.jasperreports-5.0.1.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\jasperreports-5.0.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\jcalendar-1.4.jar
+file.reference.joda-time-2.0.jar=C:\\Users\\agonzalez\\Documents\\Librerias\\joda-time-2.0.jar
 file.reference.jtds-1.2.5_FUNCIONAEN05Y08.jar=C:\\Users\\AGONZALEZ\\Desktop\\jtds-1.2.5 FUNCIONAEN05Y08.jar
 file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\AGONZALEZ\\Downloads\\librerias\\mysql-connector-java-5.1.6-bin.jar
 includes=**
@@ -40,7 +48,15 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
     ${file.reference.jtds-1.2.5_FUNCIONAEN05Y08.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jasperreports-5.0.1.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.1.3.jar}:\
+    ${file.reference.itext-pdfa-5.4.0.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.joda-time-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
